# semi-search

./: Cargo.toml  README.md  docker-compose.qdrant.yml
configs/: seeds.example.toml  seeds.semiconductors.toml
eval/: queries.semiconductors.jsonl
fixtures/: amd_mi300.txt  nvidia_blackwell.html
src/: lib.rs  main.rs  models.rs  storage.rs
tests/: crawl_index_search_cli.rs  crawler_discovery.rs  embed_cli.rs  eval_cli.rs  search_cli.rs
tests/fixtures/: eval_queries.jsonl  semiconductor_chunks.jsonl
