[package]
name = "semi-search"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Agent-first search for semiconductor research"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = "0.22"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3.10"
