[package]
name = "semi-search"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Agent-first search for semiconductor research"

[dependencies]
url = "2.5"
toml = "0.8"
sha2 = "0.10"
scraper = "0.19"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = "0.22"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3.10"
